fix heroku